# AgriFlow

./: .gitignore  CAPABILITY_REPORT.md  README.md  docker-compose.yaml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 1a337b5d8c38_modified_plantations_history.py  2b61689ecbac_created_consumables_category_for_better_.py  40c37e66c12a_add_batch_level_for_sorting.py  4393b725e9d5_plantation_weather_appconfig_refactor.py  464e5db19de0_fix_relationsip_in_personnel_model.py  4f853e447808_modified_plantations_to_maintain_history.py  4fcd4dc5f46d_fix_relationsip_in_personnel_model.py  532ab942e947_fix_models_and_add_expenses.py  55d1035ec8c0_init.py  5965b2d7ae05_updated_models_with_proper_measures_to_.py  5e0383a9e7fb_created_tables_for_location_and_weather.py  8bc7955f0bdb_core_logic_fixes.py  956695790b8c_fix_personnel_photo_type.py  9bac82a0e87e_add_approval_requests.py  a1c3f7e82d50_link_consumable_purchase_to_expense.py  ae3789f55511_converted_user_roles_to_use_seperate_.py  b20c3bab0ab4_modified_plantations_history.py  b66cbbe7a1ef_modified_plantations_history.py  c150263c93e2_sales_feature_models.py  db34b625531a_modified_plantations_history.py  fe615d798bc7_initial_schema.py
backend/app/: config.py  database.py  main.py
backend/app/api/: googleapi.py  openweathermap.py
backend/app/core/: dependencies.py  security.py
backend/app/crud/: __init__.py  approval.py  batch.py  consumable.py  customer.py  dashboard.py  expense.py  personnel.py  plantation.py  (+7 more)
backend/migrations/: env.py
(+104 files in other folders)
